@@ -489,19 +489,21 @@ standard_finalizer(cl_object o)
 #endif
 #ifdef ECL_SEMAPHORES
 	case t_semaphore: {
+                ecl_disable_interrupts_env(the_env);
                 mp_semaphore_close(o);
+                ecl_enable_interrupts_env(the_env);
 		break;
 	}
 #endif
 #ifdef ECL_THREADS
         case t_symbol: {
                 cl_object cons = ecl_list1(MAKE_FIXNUM(o->symbol.binding));
-                ecl_disable_interrupts();
+                ecl_disable_interrupts_env(the_env);
                 THREAD_OP_LOCK();
                 ECL_CONS_CDR(cons) = cl_core.reused_indices;
                 cl_core.reused_indices = cons;
                 THREAD_OP_UNLOCK();
-                ecl_enable_interrupts();
+                ecl_enable_interrupts_env(the_env);
         }
 #endif
 	default:;
