@@ -1846,5 +1846,23 @@ cl_symbols[] = {
 
 {KEY_ "ENVIRON", KEYWORD, NULL, -1, OBJNULL},
 
+{EXT_ "MAKE-EXTERNAL-PROCESS", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "EXTERNAL-PROCESS", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "EXTERNAL-PROCESS-PID", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "EXTERNAL-PROCESS-INPUT", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "EXTERNAL-PROCESS-OUTPUT", EXT_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "EXTERNAL-PROCESS-STATUS", EXT_ORDINARY, NULL, -1, OBJNULL},
+
+{KEY_ "RUNNING", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "EXITED", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "SIGNALED", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "STOPPED", KEYWORD, NULL, -1, OBJNULL},
+
+{EXT_ "EXTERNAL-PROCESS-WAIT", EXT_ORDINARY, si_external_process_wait, -1, OBJNULL},
+
+#if defined(_MSC_VER) || defined(mingw32)
+{SI_ "CLOSE-WINDOWS-HANDLE", SI_ORDINARY, si_close_windows_handle, 1, OBJNULL},
+#endif
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
